--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "./build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon .build/index.js",
+    "start": "node .build/index.js",
     "dev": "tsc -w",
     "compile": "tsc",
     "build": "pkg -t node18-linux,node18-win --out-path ./dist ."
